# ecaminero-short-url-with-events

./: .gitignore  README.md  docker-compose-apps.yml  docker-compose-services.yml  docker-compose.yml
doc/: sample.request.txt  tests.bash  tests.js
service-config/: nginx.conf
short-url-app/: .containerignore  .dockerignore  Containerfile  README.md  pyproject.toml
short-url-app/service-config/: prometheus.yml
short-url-app/src/: main.py  utils.py
short-url-app/src/configs/: Database.py  Environment.py  Nats.py  Redis.py  __init__.py
short-url-app/src/decorators/: messages.py  redis.py
short-url-app/src/models/: BaseModel.py  UrlModel.py
short-url-app/src/repositories/: UrlRepository.py
short-url-app/src/routers/: AdminRouter.py  MainRouter.py
short-url-app/src/schemas/: __init__.py
short-url-app/src/schemas/filters/: UrlFilter.py
short-url-app/src/schemas/pydantic/: UrlSchema.py
short-url-app/src/services/: UrlService.py
short-url-app/src/tasks/: nats.py  redis.py
short-url-app/tests/: test_1_create_url.py  test_2_get_url
short-url-app/tests/repositories/: test_UrlRepository.py
short-url-app/tests/services/: test_UrlService.py
short-url-events/: .dockerignore  README.md  package-lock.json  package.json
short-url-events/src/: app.module.ts  constants.ts  main.ts  types.ts  utils.ts
short-url-events/src/events/: events.controller.ts  events.module.ts  events.service.ts  nats.service.ts
short-url-events/src/metrics/: metrics.controller.ts  metrics.entity.ts  metrics.module.ts  metrics.service.ts  nats.service.ts
(+2 files in other folders)
