[tool.poetry]
name = "short-url"
version = "0.1.0"
description = "A short url app"
authors = ["Your Name <ecaminero@ai.com>"]
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
redis = {extras = ["hiredis"], version = "^4.5.4"}
nanoid = "^2.0.0"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
nats-py = {extras = ["nkeys"], version = "^2.2.0"}
requests = "^2.28.2"
hypercorn = "^0.14.3"
fastapi-filter = { extras = ["sqlalchemy"],  version = "0.6", python = ">=3.8,<3.12" }
prometheus-fastapi-instrumentator = "^6.0.0"
newrelic = "^8.8.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
faker = "^18.4.0"
httpx = "^0.24.0"

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["**/__init__.py",]
source = ["src"]

[tool.poetry.scripts]
start = "src.main:app"
